<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    
   <Button android:id="@+id/btn_login"
          android:text="@string/login"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content" />
   
    <Button android:id="@+id/btn_search_content"
          android:text="@string/search_content"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content" /> 
    <Button android:id="@+id/btn_search_user"
          android:text="@string/search_user"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content" />
    <Button android:id="@+id/btn_unfllow_expire_user"
          android:text="@string/unfllow_expire_user"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content" />
    <Button android:id="@+id/btn_forward_users_message"
          android:text="@string/forward_users_message"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content" />
    <Button android:id="@+id/btn_post_and_at_search_content"
          android:text="@string/post_and_at_search_content"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content" />
    <Button android:id="@+id/btn_post_and_at_search_user"
          android:text="@string/post_and_at_search_user"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content" />

</LinearLayout>
